<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="MR_Error_text">Something Bad Happened!</string>
    <string name="MR_Tap_retry_text">Tap to Retry</string>
    <string name="Rs">₹</string>
    <string name="aadhar_no">Aadhar No</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="about_me">About me</string>
    <string name="about_us">About us</string>
    <string name="accept">Accept</string>
    <string name="account_and_settings">Account and Settings</string>
    <string name="account_details">Account Details</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_type">Account Type</string>
    <string name="action_add">Add</string>
    <string name="action_add_credit_card">Add New Card</string>
    <string name="action_browse_products">Browse Therapists Now</string>
    <string name="action_clear_all">Clear all</string>
    <string name="action_create_account">Create an Account</string>
    <string name="action_dependent">Dependent</string>
    <string name="action_done">Done</string>
    <string name="action_find_providers">Find Therapists</string>
    <string name="action_forgot_password">Forgot password</string>
    <string name="action_in_crisis">In Crisis?</string>
    <string name="action_next">Next</string>
    <string name="action_no">No</string>
    <string name="action_ok">OK</string>
    <string name="action_policy_holder">Policyholder</string>
    <string name="action_privacy_policy">privacy policy</string>
    <string name="action_resend">Resend</string>
    <string name="action_save">Save</string>
    <string name="action_see_details">See Details</string>
    <string name="action_send_message">Send message</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_skip">Skip</string>
    <string name="action_submit">Submit</string>
    <string name="action_terms_condotion">Terms and conditions</string>
    <string name="action_update">Update</string>
    <string name="action_update_appointment">Update Appointment</string>
    <string name="action_update_card">Update Card</string>
    <string name="action_yes">Yes</string>
    <string name="activate">Activate</string>
    <string name="activating">ACTIVATING …</string>
    <string name="add_card">Add a new card</string>
    <string name="address">Your Address</string>
    <string name="alert_image_content_description">Alert Image</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="already_have_account">Already have an account? Login </string>
    <string name="amount">Amount</string>
    <string name="amount_is_required">Please enter some amount</string>
    <string name="and">and</string>
    <string name="anniversary">Anniversary?</string>
    <string name="app_name">Talk To Angel</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="appointment_cancelled">Appointment Cancelled</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="appointment_history">Appointment History</string>
    <string name="appointment_pending">Appointment Pending</string>
    <string name="appointment_type">Appointment Type</string>
    <string name="appointments">Appointments</string>
    <string name="availability">Availability</string>
    <string name="back_to_home">Back to Home</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="bank_details">Bank Details</string>
    <string name="bank_name">Bank Name</string>
    <string name="basic_information">Basic Information</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="branch_city">Branch City</string>
    <string name="by_requesting_this_appointment">By requesting this appointmentn i agree to grant julie LeBlanc access to my health record on Talk to Angel as described in the Talk to Angel Policy.</string>
    <string name="by_sending_message_i_agree_to_jilie_leblanc_access_to_my_health_record_on_breakthrough_as_described_in_the_breakthrough_privacy_policy">By sending message, I agree to Jilie LeBlanc access to my health record on Breakthrough as described in the Breakthrough Privacy Policy.</string>
    <string name="calendar">Calendar</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="cancelled">Payment cancelled!</string>
    <string name="card_label">Card Label</string>
    <string name="card_name">Card name</string>
    <string name="card_number">XXXX-XXXX-XXXX</string>
    <string name="card_saved">Your card has been saved</string>
    <string name="card_verification_code">What\'s your card verification code?</string>
    <string name="card_will_be_encrypted">Your card details are encrypted</string>
    <string name="cashCardNote">Note: In the next step you will be redirected to your bank\'s website to verify yourself.</string>
    <string name="cb_ac_debited_twice">* Your account may be debited twice if you retry.</string>
    <string name="cb_approve_otp">Approve</string>
    <string name="cb_authenticate_with">Select an option for Faster Payment</string>
    <string name="cb_b_cancel">Cancel</string>
    <string name="cb_bank_logo">Bank LOGO</string>
    <string name="cb_bank_page_loading">Please wait. Bank page is loading..</string>
    <string name="cb_btn_action">btn_action</string>
    <string name="cb_btn_text">btn_text</string>
    <string name="cb_button">Button</string>
    <string name="cb_cancel">cancel</string>
    <string name="cb_cancel_transaction">Cancel Transaction</string>
    <string name="cb_card_not_registered_with_pin">Your card has not been registered for PIN yet. Do you want to continue with PIN?</string>
    <string name="cb_checkbox">checkbox</string>
    <string name="cb_choose">choose</string>
    <string name="cb_confirm_transaction">Confirm Transaction</string>
    <string name="cb_detect_bank">detectBank</string>
    <string name="cb_detect_otp">detectOtp</string>
    <string name="cb_enter_caps_otp">Enter OTP</string>
    <string name="cb_enter_manually">Enter Manually</string>
    <string name="cb_enter_otp">enterOTP</string>
    <string name="cb_enter_otp_c">Enter OTP</string>
    <string name="cb_enter_pin">enterPIN</string>
    <string name="college_university">College/University</string>
    <string name="credit_card_info">Please enter credit, debit or FSA card to automatically pay after your appointment.</string>
    <string name="csv">###</string>
    <string name="dashboard">Dashboard</string>
    <string name="degree">Degree</string>
    <string name="email">Email</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="get_started_find_therapist">Get started find therapist licensed in your state of residence.</string>
    <string name="how_does_it_work">How does it work?</string>
    <string name="if_you_are_in_crisis_call_national_suicide_prevention_lifeline">If you are in crisis, call the National Suicide Prevention Lifeline, a free, 24-hour hotline, at 18002738255.</string>
    <string name="if_your_issue_is_an_emergency_call_911">If your issue is an emergency, call 911 or go to your nearest emergency room. Breakthrough does not offer crisis counseling or emergency services.</string>
    <string name="in_crisis">In Crisis</string>
    <string name="language">Language</string>
    <string name="log_out">Log Out</string>
    <string name="male">Male</string>
    <string name="messages">Messages</string>
    <string name="month">Month</string>
    <string name="password">Password</string>
    <string name="payment_policies">Payment Policies</string>
    <string name="phone_number">What\'s your Phone Number</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_state_city_or_zip_code">state, city or Pin Code</string>
    <string name="providers">Therapists</string>
    <string name="remove_education">Remove Education</string>
    <string name="schedule">Schedule</string>
    <string name="share">Share</string>
    <string name="sign_up">SIGN UP</string>
    <string name="slash">/</string>
    <string name="slogan">The best way to pay online</string>
    <string name="specialties">Specialties</string>
    <string name="text_payment_policies">We never charge your card until after your appointmnet. You can read about our</string>
    <string name="text_please_be_advised">Please be advised that therapists licensed in state other than your own are not legally allowed to service you.</string>
    <string name="therapist_type">Therapist Type</string>
    <string name="tos_n_privacy">By signing up you agree to Terms of Service</string>
    <string name="what_is_credit_card_holder_name">Card holder name</string>
    <string name="what_is_credit_card_number">What is your card number?</string>
    <string name="whats_your_home_state">What\'s your home state?</string>
    <string name="xxxx">xxxx xxxx xxxx xxxx</string>
    <string name="year">Year</string>
    <string name="your_state_or_zip_code">Your State or Pin Code</string>
</resources>