<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:icon="@drawable/ic_dashboard_black_24dp" android:id="@+id/nav_dashboard" android:title="@string/dashboard" />
        <item android:icon="@drawable/ic_appointment_black_24dp" android:id="@+id/nav_appointment" android:title="@string/appointments" />
        <item android:icon="@drawable/ic_schedule_black_24dp" android:id="@+id/nav_schedule" android:title="@string/schedule" />
        <item android:icon="@drawable/ic_message_green_24dp" android:id="@+id/nav_messages" android:title="@string/messages" />
        <item android:icon="@drawable/ic_provider_black_24dp" android:id="@+id/nav_providers" android:title="@string/providers" />
        <item android:icon="@drawable/ic_list_black_24dp" android:id="@+id/nav_account_settings" android:title="@string/account_and_settings" />
        <item android:icon="@drawable/ic_support_black_24dp" android:id="@+id/nav_test" android:title="Test" />
    </group>
    <item android:title="Communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item android:icon="@drawable/ic_support_black_24dp" android:id="@+id/nav_support" android:title="@string/about_us" />
                <item android:icon="@drawable/ic_support_black_24dp" android:id="@+id/nav_how_it_works" android:visible="false" android:title="@string/how_does_it_work" />
                <item android:icon="@drawable/ic_share_black_24dp" android:id="@+id/nav_share" android:title="@string/share" />
                <item android:icon="@drawable/ic_power_settings_new" android:id="@+id/nav_logout" android:title="@string/log_out" />
            </group>
        </menu> />
</menu>
