<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res-auto" app:layout_width="match_parent" app:layout_height="match_parent">
    <LinearLayout app:orientation="vertical" app:paddingLeft="@dimen/activity_horizontal_margin" app:paddingTop="@dimen/activity_vertical_margin" app:paddingRight="@dimen/activity_horizontal_margin" app:layout_width="match_parent" app:layout_height="wrap_content">
        <ProgressBar app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/reg_progress2" app:visibility="gone" app:layout_width="wrap_content" app:layout_height="wrap_content" style="?unknown_attr_ref: 101007a" />
        <LinearLayout app:orientation="vertical" app:id="@+id/form2" app:layout_width="match_parent" app:layout_height="wrap_content">
            <android.support.v7.widget.CardView app:layout_width="match_parent" app:layout_height="wrap_content" app:cardCornerRadius="5dp" app:cardElevation="@dimen/cardview_default_elevation">
                <LinearLayout app:orientation="vertical" app:paddingLeft="@dimen/activity_horizontal_margin" app:paddingTop="@dimen/activity_vertical_margin" app:paddingRight="@dimen/activity_horizontal_margin" app:paddingBottom="8dp" app:layout_width="match_parent" app:layout_height="wrap_content">
                    <TextView app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/credit_card_info" />
                    <TextView app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="10dp" app:text="@string/text_payment_policies" />
                    <Button app:textColor="@color/colorPrimary" app:gravity="top|bottom|center_vertical|fill_vertical|center|fill" app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/btn_payment_policy" app:layout_width="wrap_content" app:layout_height="UNKNOWN_DATA_0x2801" app:text="@string/payment_policies" app:textAllCaps="false" style="?unknown_attr_ref: 101032b" />
                    <TextView app:textSize="16sp" app:textStyle="bold" app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="@dimen/activity_vertical_margin" app:text="@string/what_is_credit_card_holder_name" />
                    <EditText app:id="@+id/etCardHolderName" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="5dp" app:hint="@string/prompt_name" app:maxLength="30" app:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|numberDecimal|phone|time" />
                    <TextView app:textSize="16sp" app:textStyle="bold" app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="@dimen/activity_vertical_margin" app:text="@string/what_is_credit_card_number" />
                    <EditText app:id="@+id/et_credit_card_no" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="5dp" app:hint="@string/xxxx" app:maxLength="16" app:inputType="number|numberSigned|numberDecimal|numberPassword|phone" />
                    <TextView app:textSize="16sp" app:textStyle="bold" app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="@dimen/activity_vertical_margin" app:text="@string/expiration_date" />
                    <LinearLayout app:orientation="horizontal" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="5dp" app:layout_marginBottom="5dp">
                        <Button app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/btnMonth" app:background="@drawable/btn_10dp_grey_border" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginRight="5dp" app:hint="@string/month" app:layout_weight="1.0" />
                        <TextView app:gravity="top|bottom|center_vertical|fill_vertical|center|fill" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/slash" />
                        <Button app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/btnYear" app:background="@drawable/btn_10dp_grey_border" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginLeft="5dp" app:hint="@string/year" app:layout_weight="1.0" />
                    </LinearLayout>
                    <TextView app:textSize="16sp" app:textStyle="bold" app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="@dimen/activity_vertical_margin" app:text="@string/card_verification_code" />
                    <EditText app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/et_csv" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="5dp" app:layout_marginBottom="@dimen/activity_vertical_margin" app:hint="@string/csv" app:ems="6" app:maxLength="4" app:inputType="number|numberSigned|numberDecimal|numberPassword|phone" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <Button app:textColor="@color/white" app:id="@+id/btn_next" app:background="@drawable/btn_10dp_green_selected" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x2801" app:layout_marginTop="20dp" app:layout_marginBottom="@dimen/activity_vertical_margin" app:text="@string/action_save" style="?unknown_attr_ref: 1010042" />
    </LinearLayout>
</ScrollView>
