<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:paddingLeft="@dimen/sixteen" android:paddingTop="64dp" android:paddingRight="@dimen/sixteen" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo_color" android:scaleType="fitXY" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010040" android:textSize="18sp" android:textColor="#000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="32dp" android:text="@string/slogan" />
        <AutoCompleteTextView android:id="@id/email" android:paddingLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/eight" android:hint="@string/email" android:ems="10" android:drawableLeft="@drawable/message_icon" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" />
        <AutoCompleteTextView android:id="@id/phone_number" android:paddingLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/eight" android:hint="@string/phone_number" android:ems="10" android:maxLength="10" android:drawableLeft="@drawable/mobile" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|number|numberSigned|numberDecimal|numberPassword|phone" />
        <EditText android:id="@id/password" android:paddingLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/eight" android:hint="@string/password" android:ems="10" android:drawableLeft="@drawable/password" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
        <Button android:textColor="#ffffff" android:id="@id/done" android:background="@drawable/button1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/twelve" android:text="@string/sign_up" />
        <TextView android:textColorLink="#000000" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/tos_n_privacy" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tos_n_privacy" />
        <ImageView android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x1402" android:layout_marginTop="17sp" android:layout_marginBottom="0dp" android:src="@drawable/security_icons" />
    </LinearLayout>
</ScrollView>
